--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <!--p v-show="instock">This just hide</p-->
+            <p v-if="inventory > 10">In stock</p>
+            <p v-else-if="inventory > 0&&inventory < 10">Almost out of stock</p>
+            <p v-else>Out of stock</p>
+            <p v-if="onsale">On sale</p>
           </div>
         </div>
       </div>
