--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
+    <script>
+      import Vue from 'vue'
+    </script>
+      
   </head>
   <body>
     <div id="app">
@@ -26,8 +30,9 @@
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
-            <button class="button">Add to Cart</button>
+            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
+            <button class="button" @click="addToCart">Add to Cart</button>
+            <button class="button" @click="decreaseCart">Decrease to Cart</button>
           </div>
         </div>
       </div>
