--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <img v-bind:src="image">
           </div>
           <div class="product-info">
-            <h1 v-if="false">{{ title }}</h1>
-            <h1 v-else>{{ isOnsale }}</h1>
+            <h1>{{ title }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+            <p>{{ isOnsale }}</p>
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
